--- a/public/css/template-styles.css
+++ b/public/css/template-styles.css
@@ -16,6 +16,7 @@
 
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
+  font-size: 12px;
 }
 .demo-avatar {
   width: 48px;
